--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -1,226 +1,236 @@
 @import "../mixins.scss";
 
 header {
-  border-bottom: 2px solid orange;
-  .header {
-    position: relative;
-    width: 1200px;
-    margin: 0 auto;
-    height: 70px;
-    .main {
-      display: grid;
-      grid-template-columns: 1.12fr 4fr 2.5fr 1.5fr;
-      color: white;
-      position: relative;
-      .logo {
-        font-family: cursive;
-        font-weight: bold;
-        text-transform: uppercase;
-        color: orange;
-        font-size: 36px;
-        cursor: pointer;
-        line-height: 70px;
-        transform: translateY(-2px);
-        text-shadow: 0 0 10px 1px orange;
-        &:hover {
-          transform: translateY(-3px);
-          transition: 0.2s;
-        }
-      }
-      .navbar ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0 0 0 10px;
-        overflow: hidden;
-        @include absoluteCenter("col");
-        li {
-          font-weight: bold;
-          margin-right: 15px;
-          width: 100px;
-          text-align: center;
-          text-decoration: none;
-          float: left;
-          cursor: pointer;
-          text-transform: uppercase;
-          font-size: 15px;
-          border-radius: 10px;
-          padding: 6px 5px 5px 5px;
-          border: 2px solid orange;
-          color: white;
-          i {
-            color: orange;
-            font-size: 12px;
-          }
-          &:hover {
-            // border: 2px solid white;
-            color: orange;
-            background-color: lightyellow;
-          }
-        }
-      }
-      .search {
-        margin-top: 20px;
-        width: 300px;
-        height: 30px;
-        .formsearch {
-          width: 100%;
-          height: 105%;
-          vertical-align: middle;
-          display: flex;
-          background-color: white;
-          border-radius: 20px;
-          .ipsearch {
-            border: none;
-            width: 90%;
-            height: 93%;
-            padding: 1px 8px 0 12px;
-            outline: none;
-            border-radius: 20px;
-            font-size: 12px;
-          }
-          div {
-            padding-top: 8px;
-            color: gray;
-          }
-          &:hover {
-            box-shadow: 0 0 4px orange;
-          }
-        }
-      }
+	border-bottom: 2px solid orange;
+	.header {
+		position: relative;
+		width: 1200px;
+		margin: 0 auto;
+		height: 70px;
+		.main {
+			display: grid;
+			grid-template-columns: 1.12fr 4fr 2.5fr 1.5fr;
+			color: white;
+			position: relative;
+			.logo {
+				font-family: cursive;
+				font-weight: bold;
+				text-transform: uppercase;
+				color: orange;
+				font-size: 36px;
+				cursor: pointer;
+				line-height: 70px;
+				transform: translateY(-2px);
+				text-shadow: 0 0 10px 1px orange;
+				&:hover {
+					transform: translateY(-3px);
+					transition: 0.2s;
+				}
+			}
+			.navbar ul {
+				list-style-type: none;
+				margin: 0;
+				padding: 0 0 0 10px;
+				overflow: hidden;
+				@include absoluteCenter("col");
+				li {
+					font-weight: bold;
+					margin-right: 15px;
+					width: 100px;
+					text-align: center;
+					text-decoration: none;
+					float: left;
+					cursor: pointer;
+					text-transform: uppercase;
+					font-size: 15px;
+					border-radius: 10px;
+					padding: 6px 5px 5px 5px;
+					border: 2px solid orange;
+					color: white;
+					i {
+						color: orange;
+						font-size: 12px;
+					}
+					&:hover {
+						// border: 2px solid white;
+						color: orange;
+						background-color: lightyellow;
+					}
+				}
+			}
+			.search {
+				margin-top: 20px;
+				width: 300px;
+				height: 30px;
+				.formsearch {
+					width: 100%;
+					height: 105%;
+					vertical-align: middle;
+					display: flex;
+					background-color: white;
+					border-radius: 20px;
+					.ipsearch {
+						border: none;
+						width: 90%;
+						height: 93%;
+						padding: 1px 8px 0 12px;
+						outline: none;
+						border-radius: 20px;
+						font-size: 12px;
+					}
+					div {
+						padding-top: 8px;
+						color: gray;
+					}
+					&:hover {
+						box-shadow: 0 0 4px orange;
+					}
+				}
+			}
 
-      .login {
-        display: block;
-        width: 100%;
-        margin-top: 17px;
-        height: 36px;
-        box-shadow: 0 0 3px orange;
-        font-size: 17px;
-        font-weight: bold;
-        border-radius: 7px;
-        cursor: pointer;
-        color: sandybrown;
-        background: none;
-        outline: none;
-        border: none;
+			.login {
+				display: block;
+				width: 100%;
+				margin-top: 17px;
+				height: 36px;
+				box-shadow: 0 0 3px orange;
+				font-size: 17px;
+				font-weight: bold;
+				border-radius: 7px;
+				cursor: pointer;
+				color: sandybrown;
+				background: none;
+				outline: none;
+				border: none;
 
-        .avt_user {
-          vertical-align: middle;
-          width: 21px;
-          height: 21px;
-          object-fit: cover;
-          border-radius: 50%;
-          margin-top: -3px;
-        }
-        i {
-          font-size: 15px;
-        }
-        &:hover {
-          box-shadow: 0 0 8px orange;
-          color: orange;
-        }
-      }
-    }
-    .nav_user {
-      position: absolute;
-      margin: 0 auto;
-      width: 1200px;
-      top: 60px;
-      display: grid;
-      grid-template-columns: 1000px 200px;
-      &-btn {
-        box-shadow: 0 0 3px orange;
-        font-size: 16px;
-        font-weight: bold;
-        border-radius: 7px;
-        cursor: pointer;
-        color: whitesmoke;
-        background-color: #333;
-        z-index: 2;
-        &-children {
-          height: 36px;
-          line-height: 36px;
-          text-align: center;
-          color: whitesmoke;
-          i {
-            color: orange;
-          }
-          &:hover {
-            box-shadow: 0 0 8px orange;
-            color: orange;
-            background-color: white;
-            border-radius: 7px;
-          }
-        }
-      }
-    }
-    .row_list {
-      position: absolute;
-      margin: 0 auto;
-      width: 1200px;
-      top: 60px;
-      display: grid;
-      grid-template-columns: 665px 292px 243px;
-      .boxlist {
-        box-shadow: 0 0 3px orange;
-        font-size: 16px;
-        font-weight: bold;
-        border-radius: 7px;
-        cursor: pointer;
-        color: white;
-        background-color: #333;
-        max-height: 410px;
-        overflow: auto;
-        z-index: 2;
-        .list {
-          margin: 10px 10px;
-          .list_item {
-            margin: 0 10px;
-            display: flex;
-            column-gap: 15px;
-            padding-top: 10px;
-            padding-bottom: 10px;
-            border-bottom: 1px solid orange;
-            img {
-              height: 60px;
-            }
-            .col_right {
-              .name {
-                padding-top: 1px;
-                color: orange;
-                font-size: 17px;
-                max-width: 200px;
-                text-transform: capitalize;
-                .overlay {
-                  position: relative;
-                }
-              }
-              .rate {
-                color: white;
-                font-size: 13px;
-                padding-top: 5px;
-                font-weight: 300;
-              }
-              .runningTime {
-                color: white;
-                font-size: 13px;
-                padding-top: 3px;
-                font-weight: 300;
-              }
-            }
-          }
-        }
-      }
-      .boxlist::-webkit-scrollbar {
-        width: 8px;
-      }
-      .boxlist::-webkit-scrollbar-thumb {
-        background-image: linear-gradient(to bottom, orange, #333);
-        border-radius: 100rem;
-      }
-      .boxlist::-webkit-scrollbar-track {
-        background-color: gray;
-        border-radius: 100rem;
-      }
-    }
-  }
+				.avt_user {
+					vertical-align: middle;
+					width: 21px;
+					height: 21px;
+					object-fit: cover;
+					border-radius: 50%;
+					margin-top: -3px;
+				}
+				i {
+					font-size: 15px;
+				}
+				&:hover {
+					box-shadow: 0 0 8px orange;
+					color: orange;
+				}
+			}
+		}
+		.nav_user {
+			position: absolute;
+			margin: 0 auto;
+			width: 1200px;
+			top: 60px;
+			display: grid;
+			grid-template-columns: 1000px 200px;
+			&-btn {
+				box-shadow: 0 0 3px orange;
+				font-size: 16px;
+				font-weight: bold;
+				border-radius: 7px;
+				color: whitesmoke;
+				background-color: #333;
+				z-index: 2;
+				&-childrenx {
+					height: 36px;
+					line-height: 36px;
+					text-align: center;
+					color: whitesmoke;
+					i {
+						color: orange;
+					}
+				}
+				&-children {
+					cursor: pointer;
+
+					height: 36px;
+					line-height: 36px;
+					text-align: center;
+					color: whitesmoke;
+					i {
+						color: orange;
+					}
+					&:hover {
+						box-shadow: 0 0 8px orange;
+						color: orange;
+						background-color: white;
+						border-radius: 7px;
+					}
+				}
+			}
+		}
+		.row_list {
+			position: absolute;
+			margin: 0 auto;
+			width: 1200px;
+			top: 60px;
+			display: grid;
+			grid-template-columns: 665px 292px 243px;
+			.boxlist {
+				box-shadow: 0 0 3px orange;
+				font-size: 16px;
+				font-weight: bold;
+				border-radius: 7px;
+				cursor: pointer;
+				color: white;
+				background-color: #333;
+				max-height: 410px;
+				overflow: auto;
+				z-index: 2;
+				.list {
+					margin: 10px 10px;
+					.list_item {
+						margin: 0 10px;
+						display: flex;
+						column-gap: 15px;
+						padding-top: 10px;
+						padding-bottom: 10px;
+						border-bottom: 1px solid orange;
+						img {
+							height: 60px;
+						}
+						.col_right {
+							.name {
+								padding-top: 1px;
+								color: orange;
+								font-size: 17px;
+								max-width: 200px;
+								text-transform: capitalize;
+								.overlay {
+									position: relative;
+								}
+							}
+							.rate {
+								color: white;
+								font-size: 13px;
+								padding-top: 5px;
+								font-weight: 300;
+							}
+							.runningTime {
+								color: white;
+								font-size: 13px;
+								padding-top: 3px;
+								font-weight: 300;
+							}
+						}
+					}
+				}
+			}
+			.boxlist::-webkit-scrollbar {
+				width: 8px;
+			}
+			.boxlist::-webkit-scrollbar-thumb {
+				background-image: linear-gradient(to bottom, orange, #333);
+				border-radius: 100rem;
+			}
+			.boxlist::-webkit-scrollbar-track {
+				background-color: gray;
+				border-radius: 100rem;
+			}
+		}
+	}
 }
