--- a/src/sass/components/subcomponents/booking.scss
+++ b/src/sass/components/subcomponents/booking.scss
@@ -1,84 +1,159 @@
 .modal-booking {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
-  display: flex;
-  &-form {
-    margin: auto;
-    width: 360px;
-    background-color: white;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    .btnX {
-      float: right;
-      font-size: 21px;
-      border: none;
-      background: #ffa50033;
-      color: orange;
-      height: 30px;
-      width: 30px;
-      margin: 5px;
-      border-radius: 2px;
-      cursor: pointer;
-      &:hover {
-        box-shadow: 0 0 5px #ffd000b0;
-      }
-      i {
-        margin: auto;
-      }
-    }
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      .title {
-        text-align: center;
-        font-size: 30px;
-        font-weight: bold;
-        color: orange;
-        padding-bottom: 20px;
-      }
-      .content {
-        color: black;
-        font-weight: 500;
-        width: 250px;
-        padding-bottom: 20px;
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 1;
+	display: flex;
+	&-form {
+		margin: auto;
+		width: 360px;
+		background-color: white;
+		border-radius: 10px;
+		display: flex;
+		flex-direction: column;
+		.btnX {
+			float: right;
+			font-size: 21px;
+			border: none;
+			background: #ffa50033;
+			color: orange;
+			height: 30px;
+			width: 30px;
+			margin: 5px;
+			border-radius: 2px;
+			cursor: pointer;
+			&:hover {
+				box-shadow: 0 0 5px #ffd000b0;
+			}
+			i {
+				margin: auto;
+			}
+		}
+		.container {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			.title {
+				text-align: center;
+				font-size: 30px;
+				font-weight: bold;
+				color: orange;
+				padding-bottom: 20px;
+			}
+			.content {
+				color: black;
+				font-weight: 500;
+				width: 250px;
+				padding-bottom: 20px;
 
-        .row {
-          display: flex;
-          .coll {
-            color: #000000c2;
-            min-width: 80px;
-            font-weight: bold;
-            font-size: 17px;
-          }
-        }
-      }
+				.row {
+					display: flex;
+					.coll {
+						color: #000000c2;
+						min-width: 80px;
+						font-weight: bold;
+						font-size: 17px;
+					}
+				}
+			}
 
-      .button {
-        margin: 0 auto 50px;
+			.button {
+				margin: 0 auto 50px;
 
-        width: 200px;
-        height: 38px;
-        font-size: 18px;
-        display: block;
-        background: orange;
-        color: whitesmoke;
-        font-weight: bold;
-        border: none;
-        border-radius: 10px;
-        border: 2px solid orange;
-        cursor: pointer;
-        &:hover {
-          box-shadow: 0 0 8px orange;
-          border: 2px solid whitesmoke;
-        }
-      }
-    }
-  }
+				width: 200px;
+				height: 38px;
+				font-size: 18px;
+				display: block;
+				background: orange;
+				color: whitesmoke;
+				font-weight: bold;
+				border: none;
+				border-radius: 10px;
+				border: 2px solid orange;
+				cursor: pointer;
+				&:hover {
+					box-shadow: 0 0 8px orange;
+					border: 2px solid whitesmoke;
+				}
+			}
+		}
+	}
+}
+.modalx {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 1;
+	display: flex;
+	&-form {
+		margin: auto;
+		width: 360px;
+		background-color: white;
+		border-radius: 10px;
+		display: flex;
+		flex-direction: column;
+		.btnX {
+			float: right;
+			font-size: 21px;
+			border: none;
+			background: #ffa50033;
+			color: orange;
+			height: 30px;
+			width: 30px;
+			margin: 5px;
+			border-radius: 2px;
+			cursor: pointer;
+			&:hover {
+				box-shadow: 0 0 5px #ffd000b0;
+			}
+			i {
+				margin: auto;
+			}
+		}
+		.container {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			.title {
+				text-align: center;
+				font-size: 30px;
+				font-weight: bold;
+				color: orange;
+				padding-bottom: 20px;
+			}
+			.content {
+				color: black;
+				font-weight: 500;
+				width: 250px;
+				text-align: center;
+				padding-bottom: 20px;
+			}
+
+			.button {
+				margin: 0 auto 50px;
+
+				width: 200px;
+				height: 38px;
+				font-size: 18px;
+				display: block;
+				background: orange;
+				color: whitesmoke;
+				font-weight: bold;
+				border: none;
+				border-radius: 10px;
+				border: 2px solid orange;
+				cursor: pointer;
+				&:hover {
+					box-shadow: 0 0 8px orange;
+					border: 2px solid whitesmoke;
+				}
+			}
+		}
+	}
 }
