--- a/src/sass/components/subcomponents/feedback.scss
+++ b/src/sass/components/subcomponents/feedback.scss
@@ -1,207 +1,209 @@
 .container_fb_cm {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  column-gap: 20px;
-  margin-bottom: 10px;
-  .feedback {
-    border: 1px solid gray;
-    border-radius: 10px;
+	// display: grid;
+	// grid-template-columns: 1fr 1fr;
+	// column-gap: 20px;
+	margin: 30px 0;
+	.feedback {
+		width: 50%;
+		margin: 0 auto;
+		border: 1px solid gray;
+		border-radius: 10px;
 
-    .title_name {
-      margin: 10px 0 0 20px;
-      color: orange;
-      font-size: 22px;
-      font-weight: bold;
-    }
-    .total_rate {
-      margin: 10px 0 0 20px;
-      .rate {
-        display: flex;
-        margin-top: 10px;
-        .rating {
-          font-size: 13px;
-        }
-      }
-      .line_gray {
-        height: 1px;
-        background-color: gray;
-        margin: 10px 150px 0 150px;
-      }
-    }
-    .overflow {
-      max-height: 351px;
-      overflow: auto;
-      .item_postFeedback {
-        padding: 9px 20px 10px 20px;
-        display: grid;
-        .row_1 {
-          height: 30px;
-          line-height: 30px;
-          .col1 {
-            float: left;
-            display: flex;
-            .avt_user {
-              vertical-align: middle;
-              width: 30px;
-              height: 30px;
-              object-fit: cover;
-              border-radius: 50%;
-            }
-            .name_user {
-              color: orange;
-              font-weight: bold;
-            }
-          }
-          .time_col2 {
-            float: right;
-            color: white;
-          }
-        }
-        .rate {
-          margin-top: 5px;
-        }
-        .content_feedback {
-          margin-top: 5px;
-          margin-bottom: 10px;
-          overflow-x: hidden;
-        }
-        .line {
-          margin-top: 10px;
-          height: 1px;
-          background-color: orange;
-          width: 100%;
-        }
-      }
-    }
-    .overflow::-webkit-scrollbar {
-      width: 8px;
-    }
-    .overflow::-webkit-scrollbar-thumb {
-      background-image: linear-gradient(to bottom, orange, #ddd);
-      border-radius: 100rem;
-    }
-    .overflow::-webkit-scrollbar-track {
-      background-color: gray;
-      border-radius: 100rem;
-    }
-    .btn_review {
-      display: block;
-      text-transform: uppercase;
-      align-content: center;
-      padding: 10px 30px 10px 25px;
-      font-size: 14px;
-      font-weight: bold;
-      color: orange;
-      background: none;
-      text-align: center;
-      border-radius: 4px;
-      margin: 10px auto;
-      border: 1px solid orange;
-      cursor: pointer;
-      &:hover {
-        box-shadow: 0 0 5px orange;
-        border: 1px solid orange;
-      }
-    }
-    .modalx {
-      position: fixed;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background-color: rgba(0, 0, 0, 0.5);
-      z-index: 1;
-      display: flex;
-      &-form {
-        margin: auto;
-        width: 360px;
-        background-color: white;
-        border-radius: 10px;
-        display: flex;
-        flex-direction: column;
-        .btnX {
-          float: right;
-          font-size: 21px;
-          border: none;
-          background: #ffa50033;
-          color: orange;
-          height: 30px;
-          width: 30px;
-          margin: 5px;
-          border-radius: 2px;
-          cursor: pointer;
-          &:hover {
-            box-shadow: 0 0 5px #ffd000b0;
-          }
-          i {
-            margin: auto;
-          }
-        }
-        .container {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          .title {
-            text-align: center;
-            font-size: 30px;
-            font-weight: bold;
-            color: orange;
-            padding-bottom: 20px;
-          }
-          .content {
-            color: black;
-            font-weight: 500;
-            width: 250px;
-            text-align: center;
-            padding-bottom: 20px;
-          }
-          .stars {
-            padding-top: 20px;
-            display: flex;
-            justify-content: center;
-            flex-direction: row;
-          }
-          .textarea {
-            border: 1px solid #a9a9a9;
-            border-radius: 5px;
-            padding: 10px;
-            margin: 20px 0;
-            min-height: 100px;
-            width: 300px;
-            outline: none;
-            border: 1px solid #ffa5004d;
-          }
-          .button {
-            margin: 0 auto 50px;
+		.title_name {
+			margin: 10px 0 0 20px;
+			color: orange;
+			font-size: 22px;
+			font-weight: bold;
+		}
+		.total_rate {
+			margin: 10px 0 20px 20px;
+			.rate {
+				display: flex;
+				margin-top: 10px;
+				.rating {
+					font-size: 13px;
+				}
+			}
+			.line_gray {
+				height: 1px;
+				background-color: gray;
+				margin: 10px 150px 0 150px;
+			}
+		}
+		.overflow {
+			max-height: 456px;
+			overflow: auto;
+			.item_postFeedback {
+				padding: 9px 20px 10px 20px;
+				display: grid;
+				.row_1 {
+					height: 30px;
+					line-height: 30px;
+					.col1 {
+						float: left;
+						display: flex;
+						.avt_user {
+							vertical-align: middle;
+							width: 30px;
+							height: 30px;
+							object-fit: cover;
+							border-radius: 50%;
+						}
+						.name_user {
+							color: orange;
+							font-weight: bold;
+						}
+					}
+					.time_col2 {
+						float: right;
+						color: white;
+					}
+				}
+				.rate {
+					margin-top: 5px;
+				}
+				.content_feedback {
+					margin-top: 5px;
+					margin-bottom: 10px;
+					overflow-x: hidden;
+				}
+				.line {
+					margin-top: 10px;
+					height: 1px;
+					background-color: orange;
+					width: 100%;
+				}
+			}
+		}
+		.overflow::-webkit-scrollbar {
+			width: 8px;
+		}
+		.overflow::-webkit-scrollbar-thumb {
+			background-image: linear-gradient(to bottom, orange, #ddd);
+			border-radius: 100rem;
+		}
+		.overflow::-webkit-scrollbar-track {
+			background-color: gray;
+			border-radius: 100rem;
+		}
+		.btn_review {
+			display: block;
+			text-transform: uppercase;
+			align-content: center;
+			padding: 10px 30px 10px 25px;
+			font-size: 14px;
+			font-weight: bold;
+			color: orange;
+			background: none;
+			text-align: center;
+			border-radius: 4px;
+			margin: 10px auto;
+			border: 1px solid orange;
+			cursor: pointer;
+			&:hover {
+				box-shadow: 0 0 5px orange;
+				border: 1px solid orange;
+			}
+		}
+		.modalx {
+			position: fixed;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			background-color: rgba(0, 0, 0, 0.5);
+			z-index: 1;
+			display: flex;
+			&-form {
+				margin: auto;
+				width: 360px;
+				background-color: white;
+				border-radius: 10px;
+				display: flex;
+				flex-direction: column;
+				.btnX {
+					float: right;
+					font-size: 21px;
+					border: none;
+					background: #ffa50033;
+					color: orange;
+					height: 30px;
+					width: 30px;
+					margin: 5px;
+					border-radius: 2px;
+					cursor: pointer;
+					&:hover {
+						box-shadow: 0 0 5px #ffd000b0;
+					}
+					i {
+						margin: auto;
+					}
+				}
+				.container {
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+					.title {
+						text-align: center;
+						font-size: 30px;
+						font-weight: bold;
+						color: orange;
+						padding-bottom: 20px;
+					}
+					.content {
+						color: black;
+						font-weight: 500;
+						width: 250px;
+						text-align: center;
+						padding-bottom: 20px;
+					}
+					.stars {
+						padding-top: 20px;
+						display: flex;
+						justify-content: center;
+						flex-direction: row;
+					}
+					.textarea {
+						border: 1px solid #a9a9a9;
+						border-radius: 5px;
+						padding: 10px;
+						margin: 20px 0;
+						min-height: 100px;
+						width: 300px;
+						outline: none;
+						border: 1px solid #ffa5004d;
+					}
+					.button {
+						margin: 0 auto 50px;
 
-            width: 200px;
-            height: 38px;
-            font-size: 18px;
-            display: block;
-            background: orange;
-            color: whitesmoke;
-            font-weight: bold;
-            border: none;
-            border-radius: 10px;
-            border: 2px solid orange;
-            cursor: pointer;
-            &:hover {
-              box-shadow: 0 0 8px orange;
-              border: 2px solid whitesmoke;
-            }
-          }
-        }
-      }
-    }
-  }
-  .comments {
-    border: 1px solid gray;
-    border-radius: 10px;
-    .title_name {
-      margin: 10px 0 0 20px;
-      color: orange;
-      font-size: 22px;
-      font-weight: bold;
-    }
-  }
+						width: 200px;
+						height: 38px;
+						font-size: 18px;
+						display: block;
+						background: orange;
+						color: whitesmoke;
+						font-weight: bold;
+						border: none;
+						border-radius: 10px;
+						border: 2px solid orange;
+						cursor: pointer;
+						&:hover {
+							box-shadow: 0 0 8px orange;
+							border: 2px solid whitesmoke;
+						}
+					}
+				}
+			}
+		}
+	}
+	// .comments {
+	// 	border: 1px solid gray;
+	// 	border-radius: 10px;
+	// 	.title_name {
+	// 		margin: 10px 0 0 20px;
+	// 		color: orange;
+	// 		font-size: 22px;
+	// 		font-weight: bold;
+	// 	}
+	// }
 }
