--- a/src/sass/pages/myprofile.scss
+++ b/src/sass/pages/myprofile.scss
@@ -1,195 +1,196 @@
 .container_myprofile {
-  .main {
-    width: 1200px;
-    margin: 0 auto;
-    color: black;
-    background-color: #f0f2f5;
-    border-radius: 15px;
-    border: 5px solid gray;
-    // border-left: 1px solid orange;
-    // border-right: 1px solid orange;
-    .image {
-      position: relative;
-      .background {
-        margin: 0px auto 105px;
-        border-radius: 10px;
-        width: 100%;
-        height: 250px;
-        overflow: hidden;
-      }
-      .upload {
-        position: absolute;
-        top: 150px;
-        left: 50%;
-        transform: translateX(-50%);
-        .avt_user {
-          width: 200px;
-          height: 200px;
-          border-radius: 50%;
-          object-fit: cover;
-          border: 5px solid orange;
-          box-shadow: 0 1px 10px orange;
-        }
-        .round {
-          position: absolute;
-          bottom: 15px;
-          right: 10px;
-          background: rgb(0 0 0 / 20%);
-          width: 40px;
-          height: 40px;
-          line-height: 41px;
-          text-align: center;
-          border-radius: 50%;
-          overflow: hidden;
-          input[type="file"] {
-            position: absolute;
-            margin: 10px 20px;
-            transform: scale(2);
-            opacity: 0;
-          }
-          input[type="file"]::-webkit-file-upload-button {
-            cursor: pointer;
-          }
-        }
-      }
-    }
-    .row_mid {
-      width: 400px;
-      margin: 0 auto;
-      // display: grid;
-      // justify-content: center;
-      .name {
-        padding-top: 10px;
-        font-size: 30px;
-        font-weight: bold;
-        text-align: center;
-      }
-      .biography {
-        padding-top: 10px;
-        width: 400px;
-        font-size: 20px;
-        text-align: center;
-      }
-    }
-    .backgroundgif {
-      // background-image: url("../../assets/images/backgroundformmyprofile.gif");
-      // background-repeat: no-repeat;
-      // background-size: 100% 700px;
-      margin-top: 20px;
-      // margin-bottom: 20px;
-      // border-radius: 30px;
-      // border: 1px solid orange;
-      .margingif {
-        padding: 0 40px 20px 40px;
-        .row1 {
-          display: grid;
-          grid-template-columns: 1fr 1fr;
-          padding-top: 20px;
-          padding-left: 10px;
-          border-radius: 10px;
-          border-top: 1px solid gray;
-          text-transform: uppercase;
-          font-size: 25px;
-          color: orange;
-          font-weight: bold;
-        }
+	margin: 30px 0;
+	.main {
+		width: 1200px;
+		margin: 0 auto;
+		color: black;
+		background-color: #f0f2f5;
+		border-radius: 15px;
+		border: 5px solid gray;
+		// border-left: 1px solid orange;
+		// border-right: 1px solid orange;
+		.image {
+			position: relative;
+			.background {
+				margin: 0px auto 105px;
+				border-radius: 10px;
+				width: 100%;
+				height: 250px;
+				overflow: hidden;
+			}
+			.upload {
+				position: absolute;
+				top: 150px;
+				left: 50%;
+				transform: translateX(-50%);
+				.avt_user {
+					width: 200px;
+					height: 200px;
+					border-radius: 50%;
+					object-fit: cover;
+					border: 5px solid orange;
+					box-shadow: 0 1px 10px orange;
+				}
+				.round {
+					position: absolute;
+					bottom: 15px;
+					right: 10px;
+					background: rgb(0 0 0 / 20%);
+					width: 40px;
+					height: 40px;
+					line-height: 41px;
+					text-align: center;
+					border-radius: 50%;
+					overflow: hidden;
+					input[type="file"] {
+						position: absolute;
+						margin: 10px 20px;
+						transform: scale(2);
+						opacity: 0;
+					}
+					input[type="file"]::-webkit-file-upload-button {
+						cursor: pointer;
+					}
+				}
+			}
+		}
+		.row_mid {
+			width: 400px;
+			margin: 0 auto;
+			// display: grid;
+			// justify-content: center;
+			.name {
+				padding-top: 10px;
+				font-size: 30px;
+				font-weight: bold;
+				text-align: center;
+			}
+			.biography {
+				padding-top: 10px;
+				width: 400px;
+				font-size: 20px;
+				text-align: center;
+			}
+		}
+		.backgroundgif {
+			// background-image: url("../../assets/images/backgroundformmyprofile.gif");
+			// background-repeat: no-repeat;
+			// background-size: 100% 700px;
+			margin-top: 20px;
+			// margin-bottom: 20px;
+			// border-radius: 30px;
+			// border: 1px solid orange;
+			.margingif {
+				padding: 0 40px 20px 40px;
+				.row1 {
+					display: grid;
+					grid-template-columns: 1fr 1fr;
+					padding-top: 20px;
+					padding-left: 10px;
+					border-radius: 10px;
+					border-top: 1px solid gray;
+					text-transform: uppercase;
+					font-size: 25px;
+					color: orange;
+					font-weight: bold;
+				}
 
-        .default_main {
-          display: grid;
-          grid-template-columns: 1fr 1fr;
-          .info {
-            height: 170px;
-            margin: 10px 0 0 10px;
-            font-size: 20px;
-            display: grid;
-            grid-template-columns: 240px 300px;
-            line-height: 30px;
-            .left {
-              font-weight: bold;
-              font-size: 20px;
-            }
-          }
-          .change_password {
-            .pass {
-              margin-top: 10px;
+				.default_main {
+					display: grid;
+					grid-template-columns: 1fr 1fr;
+					.info {
+						// height: 170px;
+						margin: 10px 0 0 10px;
+						font-size: 20px;
+						display: grid;
+						grid-template-columns: 240px 300px;
+						line-height: 30px;
+						.left {
+							font-weight: bold;
+							font-size: 20px;
+						}
+					}
+					.change_password {
+						.pass {
+							margin-top: 10px;
 
-              font-weight: bold;
-              font-size: 18px;
-              margin-bottom: 4px;
-            }
-            .input {
-              border-radius: 3px;
-              text-decoration: none;
-              outline: none;
-              border: none;
-              height: 30px;
-              font-size: 20px;
-            }
-            .btnSave {
-              margin-top: 10px;
-              padding: 10px 30px;
-              font-size: 16px;
-              font-weight: bold;
-              color: orange;
-              background: none;
-              text-align: center;
-              border-radius: 5px;
-              border: 1px solid orange;
-              cursor: pointer;
-              &:hover {
-                background: orange;
-                color: whitesmoke;
-                box-shadow: 0 0 5px orange;
-              }
-            }
-            .validate {
-              display: block;
-              margin: 5px 0;
-              color: orange;
-              font-size: 15px;
-            }
-          }
-        }
+							font-weight: bold;
+							font-size: 18px;
+							margin-bottom: 4px;
+						}
+						.input {
+							border-radius: 3px;
+							text-decoration: none;
+							outline: none;
+							border: none;
+							height: 30px;
+							font-size: 20px;
+						}
+						.btnSave {
+							margin-top: 10px;
+							padding: 10px 30px;
+							font-size: 16px;
+							font-weight: bold;
+							color: orange;
+							background: none;
+							text-align: center;
+							border-radius: 5px;
+							border: 1px solid orange;
+							cursor: pointer;
+							&:hover {
+								background: orange;
+								color: whitesmoke;
+								box-shadow: 0 0 5px orange;
+							}
+						}
+						.validate {
+							display: block;
+							margin: 5px 0;
+							color: orange;
+							font-size: 15px;
+						}
+					}
+				}
 
-        .form_edit {
-          margin: 20px auto;
-          padding: 20px 50px 0 0;
-          border-radius: 10px;
-          width: 80%;
-          border: 1px solid orange;
-          box-shadow: 1px 1px 5px 0 orange;
-          background-color: white;
-          .text_title {
-            text-align: center;
-            color: orange;
-            font-size: 25px;
-            font-weight: bold;
-          }
-          .validate {
-            display: block;
-            margin: 5px 0px -10px 160px;
-            color: orange;
-            font-size: 15px;
-          }
-          .btnEdit {
-            margin: 15px 0 25px 160px;
-            padding: 10px 20px 10px 15px;
-            font-size: 16px;
-            font-weight: bold;
-            color: orange;
-            background: none;
-            text-align: center;
-            border-radius: 5px;
-            border: 1px solid orange;
-            cursor: pointer;
-            &:hover {
-              background: orange;
-              color: whitesmoke;
-              box-shadow: 0 0 5px orange;
-            }
-          }
-        }
-      }
-    }
-  }
+				.form_edit {
+					margin: 20px auto;
+					padding: 20px 50px 0 0;
+					border-radius: 10px;
+					width: 80%;
+					border: 1px solid orange;
+					box-shadow: 1px 1px 5px 0 orange;
+					background-color: white;
+					.text_title {
+						text-align: center;
+						color: orange;
+						font-size: 25px;
+						font-weight: bold;
+					}
+					.validate {
+						display: block;
+						margin: 5px 0px -10px 160px;
+						color: orange;
+						font-size: 15px;
+					}
+					.btnEdit {
+						margin: 15px 0 25px 160px;
+						padding: 10px 20px 10px 15px;
+						font-size: 16px;
+						font-weight: bold;
+						color: orange;
+						background: none;
+						text-align: center;
+						border-radius: 5px;
+						border: 1px solid orange;
+						cursor: pointer;
+						&:hover {
+							background: orange;
+							color: whitesmoke;
+							box-shadow: 0 0 5px orange;
+						}
+					}
+				}
+			}
+		}
+	}
 }
